--- a/pokemon-card.hbs
+++ b/pokemon-card.hbs
@@ -1,3 +1,5 @@
+<script id="entry-template" type="text/x-handlebars-template">
+
 <div class="card">
   <div class="card-img-top">
     <img src="{{sprites.front_default}}" alt="{{name}}" />
@@ -8,10 +10,12 @@
     <p class="card-text">Рост: {{height}}</p>
 
     <p class="card-text"><b>Умения</b></p>
-    <ul class="list-group"></ul>
+    <ul class="list-group">
     {{#each abilities}}
         <li class="list-group-item">{{ability.name}}</li>
     {{/each}}
     </ul>
   </div>
 </div>
+
+</script>
